--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.21.0",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
